# Network-Analysis-Miami-Synapse

./: .gitignore  README.md  pyproject.toml
data/: Experiments.csv
lib/: sir.py  viz_agent.py
report/: CSUniSchoolLabReport.cls  Network-Analysis-assignment-2-report.tex
src/: SIR-simulation.ipynb  main.py
src/classes/: sir.py  viz_agent.py
